# cinematic-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: asset_showcase.py  cinematic_cube.py  hello_cube.py
scripts/: check_gpu.py  install_addon.py  quick_test.py  start_blender_mcp.py
src/cinematic_pipeline/: __init__.py
src/cinematic_pipeline/assets/: __init__.py  hdri.py  library.py  model_import.py
src/cinematic_pipeline/core/: __init__.py  animation.py  camera.py  light.py  material.py  objects.py  render.py  scene.py
src/cinematic_pipeline/mcp/: __init__.py
src/cinematic_pipeline/templates/: __init__.py  fighter_jet.py  holographic_display.py  mascot_entrance.py  point_cloud_city.py  token_reveal.py
src/cinematic_pipeline/vfx/: __init__.py  compositing.py  particles.py  volumetrics.py
tests/: test_assets.py  test_scene.py  test_templates.py  test_vfx.py
